# NeuroGuard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  research_proposal.md
.github/workflows/: ci.yml
app/: dashboard.py
configs/: default.yaml
configs/experiments/: full_experiment.yaml  pre_pilot.yaml  pre_pilot_mock.yaml
configs/monitoring/: monitored.yaml  unmonitored.yaml
configs/pressures/: authority.yaml  deadline.yaml  emotional_appeal.yaml  hidden_instruction.yaml  none.yaml  peer_disagreement.yaml  sunk_cost.yaml
configs/scenarios/: eligibility_triage.yaml  evidence_summarisation.yaml  proposal_critique.yaml  trial_ranking.yaml
configs/synthetic/: patient_profiles.yaml  research_proposals.yaml
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
data/sessions/: sessions.jsonl
docs/: batch_harness.md  dataset_assembly.md  eda.md  judge.md  monitoring.md  pressures.md  research_question.md  runner.md  scenarios.md  synthetic_content.md  verification.md
notebooks/: 00_pre_pilot_sanity.ipynb  01_eda.ipynb  02_ml_classification.ipynb  03_advanced_models.ipynb  04_interpretability.ipynb  05_error_analysis.ipynb  06_bayesian_extension.ipynb  07_markov_extension.ipynb  README.md
reports/: README.md
results/: bayesian_analysis.json  error_analysis.json  interpretability.json  manifest.json  markov_analysis.json  model_comparison.json  step17_model_comparison.json  step18_interpretability.json  step19_error_analysis.json
results/bayesian/: config.json
results/classification/: config.json  metrics.json
results/eda/: config.json
results/error_analysis/: config.json  metrics.json
results/interpretability/: config.json  metrics.json
results/markov/: config.json
results/runs/: README.md
src/neuroguard/: __init__.py  cli.py  config.py  logging_setup.py
src/neuroguard/dataset/: __init__.py  assemble.py  features.py
src/neuroguard/evidence/: __init__.py  fetch.py  schema.py
src/neuroguard/judge/: __init__.py  adapters.py  judge.py  prompt.py  schema.py
src/neuroguard/monitoring/: __init__.py  apply.py  registry.py  schema.py
src/neuroguard/pressures/: __init__.py  apply.py  registry.py  schema.py
src/neuroguard/runner/: __init__.py  adapters.py  config.py  context.py  evidence_select.py  persistence.py  runner.py  schema.py
src/neuroguard/scenarios/: __init__.py  registry.py  schema.py
src/neuroguard/synthetic/: __init__.py  loader.py  schema.py
src/neuroguard/verification/: __init__.py  schema.py  verify.py
src/neuroguard/verification/signals/: __init__.py  citation.py  eligibility.py  flaws.py  language.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_batch_config.py  test_dataset.py  test_evidence.py  test_judge.py  test_monitoring.py  test_pressures.py  test_runner.py  test_scenarios.py  test_smoke.py  test_synthetic.py  test_verification.py
