[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroguard"
version = "0.1.0"
description = "A model-organism benchmark for misalignment and oversight failures in biomedical AI research agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ella Afonso"},
]
keywords = [
    "ai-safety",
    "model-organisms",
    "scalable-oversight",
    "llm-benchmark",
    "evaluations",
    "clinical-trials",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "curl-cffi>=0.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "typer[all]>=0.9",
    "structlog>=23.1",
    "tenacity>=8.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.42",
]
bayesian = [
    "pymc>=5.10",
    "arviz>=0.16",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "streamlit>=1.30",
]
providers = [
    "anthropic>=0.25",
    "openai>=1.10",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.5",
    "pre-commit>=3.5",
    "ipython>=8.0",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
    "hypothesis>=6.80",
]
all = [
    "neuroguard[ml,bayesian,viz,providers,dev,test]",
]

[project.scripts]
neuroguard = "neuroguard.cli:app"

[project.urls]
Repository = "https://github.com/Ella-Afonso/NeuroGuard"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroguard"]

# ==============================================================================
# Tool configurations — single source of truth for ruff, mypy, pytest, coverage
# ==============================================================================

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["neuroguard"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
]

[tool.coverage.run]
source = ["src/neuroguard"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
